<resources>
    <string name="app_name">Book Share</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="home">Home</string>
    <string name="Friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="Post">Post</string>
    <string name="username">username</string>
    <string name="library">Library</string>
</resources>
