<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_Post"
        android:title="@string/Post"
        android:icon="@drawable/add_post"/>
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/nav_friends"
        android:title="@string/Friends"
        android:icon="@drawable/friends"/>
    <item
        android:id="@+id/nav_find_friends"
        android:title="@string/find_friends"
        android:icon="@drawable/find_people"/>
    <item
        android:id="@+id/nav_messages"
        android:title="@string/messages"
        android:icon="@drawable/messages"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>
    <item
        android:id="@+id/nav_Logout"
        android:title="@string/Logout"
        android:icon="@drawable/logout"/>
</menu>